codepkg/objects/Faculty__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Of_Employees__c</fullName>
        <label>Amount Of Employees</label>
        <summaryForeignKey>Employee__c.Faculty__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Of_Students__c</fullName>
        <label>Amount Of Students</label>
        <summarizedField>Department__c.Amount_Of_Students__c</summarizedField>
        <summaryForeignKey>Department__c.Faculty__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dean__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dean</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Employee__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Teacher</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Faculties</relationshipLabel>
        <relationshipName>Faculties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>University</label>
        <referenceTo>University__c</referenceTo>
        <relationshipLabel>Faculties</relationshipLabel>
        <relationshipName>Faculties</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Faculty</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Faculty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Faculties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>